--- a/applications/popeye.yml
+++ b/applications/popeye.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'https://github.com/gabrieloliveers/desafio-gitops.git'
+    repoURL: 'https://github.com/gabrieloliveers/desafio-gitops'
     targetRevision: main
     path: 'desafio-gitops/manifests/popeye'
   destination:
